# eyelink-latency

./: .clang-format  .gitignore  README.md  configure.ac
scripts/: arduino.ino
scripts/analysis/: analysis.py
src/: Makefile.am
src/frontend/: Makefile.am  example.cc
src/util/: Makefile.am  display.cc  display.hh  gl_objects.cc  gl_objects.hh
